--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "test": "run-s test:*",
     "test:lint": "standard",
     "test:tape": "tape 'test.js' | tap-format-spec",
-    "test:deps": "dependency-check package.json --missing --unused --no-dev"
+    "test:deps": "dependency-check package.json --missing --unused --no-dev",
+    "version": "run-s version:*",
+    "version:changelog": "auto-changelog -p --template keepachangelog --breaking-pattern 'breaking'",
+    "version:git": "git add CHANGELOG.md",
+    "prepublishOnly": "git push && git push --tags && gh-release"
   },
   "repository": {
     "type": "git",
@@ -33,7 +37,9 @@
   "homepage": "https://github.com/bcomnes/sodium-cli#readme",
   "devDependencies": {
     "@tap-format/spec": "^0.2.0",
+    "auto-changelog": "^1.12.0",
     "dependency-check": "^3.3.0",
+    "gh-release": "^3.5.0",
     "mkdirp": "^0.5.1",
     "npm-run-all": "^4.1.5",
     "rimraf": "^2.6.3",
